; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-run.c_svg_parse_preserve_aspect_ratio.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-run.c_svg_parse_preserve_aspect_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"none\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"xMin\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"xMid\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"xMax\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"YMin\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"YMid\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"YMax\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*)* @svg_parse_preserve_aspect_ratio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @svg_parse_preserve_aspect_ratio(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %7, align 8
  store i32 1, i32* %8, align 4
  %9 = load i32*, i32** %6, align 8
  store i32 1, i32* %9, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @strstr(i8* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %51

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @strstr(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32*, i32** %6, align 8
  store i32 0, i32* %19, align 4
  br label %20

20:                                               ; preds = %18, %14
  %21 = load i8*, i8** %5, align 8
  %22 = call i64 @strstr(i8* %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32*, i32** %6, align 8
  store i32 1, i32* %25, align 4
  br label %26

26:                                               ; preds = %24, %20
  %27 = load i8*, i8** %5, align 8
  %28 = call i64 @strstr(i8* %27, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %26
  %31 = load i32*, i32** %6, align 8
  store i32 2, i32* %31, align 4
  br label %32

32:                                               ; preds = %30, %26
  %33 = load i8*, i8** %5, align 8
  %34 = call i64 @strstr(i8* %33, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %32
  %37 = load i32*, i32** %7, align 8
  store i32 0, i32* %37, align 4
  br label %38

38:                                               ; preds = %36, %32
  %39 = load i8*, i8** %5, align 8
  %40 = call i64 @strstr(i8* %39, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %38
  %43 = load i32*, i32** %7, align 8
  store i32 1, i32* %43, align 4
  br label %44

44:                                               ; preds = %42, %38
  %45 = load i8*, i8** %5, align 8
  %46 = call i64 @strstr(i8* %45, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %44
  %49 = load i32*, i32** %7, align 8
  store i32 2, i32* %49, align 4
  br label %50

50:                                               ; preds = %48, %44
  store i32 1, i32* %4, align 4
  br label %51

51:                                               ; preds = %50, %13
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local i64 @strstr(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
